--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <img src="https://octodex.github.com/images/daftpunktocat-thomas.gif" id="octocat" alt="octocat-gif" />
 
-<h1>Kawa-Banga!</h1>
+<h1>Kawa-Banga1!</h1>
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Welcome to your first GitHub Pages website!</p>
